--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                                                 </div>
                                                 <h2 class="title">
                                                     Hi, I’m <span>Junaid Quadri</span>
-                                                    <h4 class="disc">Aka yottajunaid
-                                                    </h4>
+                                                    <h5 class="disc">Aka <span>yottajunaid</span>
+                                                    </h5>
                                                 </h2>
                                                 <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
                                                 </p>
@@ -376,7 +376,7 @@
                                     <div class="row mt--40 justify-content-center">
     <div class="col-lg-12">
         <div class="section-title justify-content-center">
-            <h4 class="maintitle">Professional Skills</h4>
+            <h4 class="maintitle tryhackme-title mt--40">Professional Skills</h4>
         </div>
         <div class="skill-box-wrapper d-flex flex-wrap justify-content-start gap-3">
             <!-- Skill Box 1 -->
@@ -552,11 +552,11 @@
                     </div>
                     <div class="social-icone-wrapper">
                         <ul class="social-share d-flex liststyle">
-                            <li class="facebook"><a href="#"><i data-feather="linkedin"></i></a>
+                            <li class="linkedin"><a href="https://www.linkedin.com/in/junaid-quadri-084279241/" target="_blank"><i data-feather="linkedin"></i></a>
                             </li>
-                            <li class="instagram"><a href="#"><i data-feather="instagram"></i></a>
+                            <li class="instagram"><a href="https://www.instagram.com/yottajunaid_x/" target="_blank"><i data-feather="instagram"></i></a>
                             </li>
-                            <li class="linkedin"><a href="#"><i data-feather="twitter"></i></a>
+                            <li class="github"><a href="https://github.com/yottajunaid" target="_blank"><i data-feather="github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -565,7 +565,7 @@
                 <div class="col-sl-3 col-12 mt_sm--20 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="menu-wrapper">
                         <div class="menu-title">
-                            <h6>Links</h6>
+                            <h6>Links <h8>(Not yet Activated)</h8></h6>
                         </div>
                         <ul class="menu-footer">
                             <li><a href="#">Buy me a Coffee</a></li>
