--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                                 </div>
                                                 <h2 class="title">
                                                     Hi, I’m <span>Junaid Quadri</span>
-                                                    <h5 class="disc">Aka <span>yottajunaid</span>
+                                                    <h5>Aka <span>yottajunaid</span>
                                                     </h5>
                                                 </h2>
                                                 <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
@@ -171,8 +171,8 @@
                                         <div class="user-info-bottom">
                                             <span>Download my curriculum vitae: </span>
                                             <div class="button-wrapper d-flex">
-                                                <a class="rn-btn mr--30" href="#contacts"><span>DOWNLOAD CV</span></a>
-                                                <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
+                                                <a class="rn-btn mr--30" href="https://github.com/yottajunaid/portfolio/raw/main/assets/resume/CV2.pdf" download><span>DOWNLOAD CV</span></a>
+                                                <a class="rn-btn" href="mailto:quadrijunaid369258@gmail.com"><span>CONTACT ME</span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -519,7 +519,7 @@
                                                                     <span>SECT (2025)</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span>Leaderboard #1</span>
+                                                                    <span>Leaderboard #1 in Cybersecurity</span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">Performed Reconnaissance, Vulnerability Assessment, Data Breach Analysis and OWASP Mapping</p>
