--- a/index.html
+++ b/index.html
@@ -102,22 +102,12 @@
                 <div class="social-share-style-1 mt--40">
                     <span class="title">find with me</span>
                     <ul class="social-share d-flex liststyle">
-                        <li class="facebook"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
-                                    <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-                                </svg></a>
-                        </li>
-                        <li class="instagram"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
-                                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                                    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                                </svg></a>
-                        </li>
-                        <li class="linkedin"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
-                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-                                    <rect x="2" y="9" width="4" height="12"></rect>
-                                    <circle cx="4" cy="4" r="2"></circle>
-                                </svg></a>
-                        </li>
+                            <li class="linkedin"><a href="https://www.linkedin.com/in/junaid-quadri-084279241/" target="_blank"><i data-feather="linkedin"></i></a>
+                            </li>
+                            <li class="instagram"><a href="https://www.instagram.com/yottajunaid_x/" target="_blank"><i data-feather="instagram"></i></a>
+                            </li>
+                            <li class="github"><a href="https://github.com/yottajunaid" target="_blank"><i data-feather="github"></i></a>
+                            </li>
                     </ul>
                 </div>
                 <!-- end -->
@@ -144,7 +134,7 @@
                                                 </div>
                                                 <h2 class="title">
                                                     Hi, I’m <span>Junaid Quadri</span>
-                                                    <h5>Aka <span>yottajunaid</span>
+                                                    <h5 style="color: black;">Aka <span style="color: purple;">yottajunaid</span>
                                                     </h5>
                                                 </h2>
                                                 <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
@@ -541,7 +531,7 @@
             </div>
         </div>
         <!-- End Resume Area -->
-    </main> -->
+    </main>
     <!-- Rn footer area Start -->
     <div id="footer" class="rn-footer-area footer-style-2 rn-section-gapTop section-separator">
         <div class="container pb--80 pb_sm--40 plr_sm--20">
