--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                 </div>
                                                 <h2 class="title">
                                                     Hi, I’m <span>Junaid Quadri</span>
-                                                    <h5 style="color: black;">Aka <span style="color: purple;">yottajunaid</span>
+                                                    <h5 style="color: #5b5b5b;">Aka <span style="color: #853ccf;">yottajunaid</span>
                                                     </h5>
                                                 </h2>
                                                 <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
